--- a/index.html
+++ b/index.html
@@ -4,3 +4,5 @@
 
 <h1> My name is Oscar Chacon and my favorite hobby is play online games with my friends </h1>
 <h2> The current time is 7:14:56 </h2>
+</body>
+</html>
