--- a/index.html
+++ b/index.html
@@ -4,5 +4,12 @@
 
 <h1> My name is Oscar Chacon and my favorite hobby is play online games with my friends </h1>
 <h2> The current time is 7:14:56 </h2>
+<p> The current time is <span id='date-time'></span>.<p>
 </body>
 </html>
+
+
+<script>
+  var dt = new Date();
+  document.getElementById('date-time').innerHTML=dt;
+  </script>
